# agriculture-drone-real-time-system

./: .gitattributes  Cargo.toml
benches/: benchmark.rs
src/: lib.rs  main.rs  rabbitmq_functions.rs  structs.rs
src/actuator/: actuators.rs  gear.rs  mod.rs  motor_propellers.rs  sprayers.rs
src/benchmark_functions/: actuators_bm.rs  actuators_to_main_control_bm.rs  battery_management_bm.rs  gear_bm.rs  gps_bm.rs  main_control_bm.rs  main_control_to_actuators_bm.rs  mod.rs  monitor_bm.rs  motor_propellers_bm.rs  multispectral_camera_bm.rs  sensors_bm.rs  sensors_to_monitor_to_main_control_bm.rs  sprayers_bm.rs  thermal_bm.rs  ultrasonic_sensor_bm.rs
src/main_control/: mod.rs
src/sensor/: battery_management.rs  gps.rs  mod.rs  monitor.rs  multispectral_camera.rs  thermal.rs  ultrasonic_sensor.rs
