[package]
name = "agriculture_drone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduled-thread-pool = "0.2.7"
bma-benchmark = "0.0.24"
amiquip = "0.4.2"
rand = "0.8"
serde_json = "1.0.117"
serde = "1.0.201"
once_cell = "1.19.0"
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false